# BookmarkSearch

./: ARCHITECTURE.md  Cargo.toml  READEME.md  README.md
src/: bookmarks.rs  hotkey.rs  index.rs  main.rs  ui.rs
