[package]
name = "bookmark_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6"
fuzzy-matcher = "0.3"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
open = "5"
log = "0.4"
simplelog = "0.12"
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse"
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
